Native/chatbot-nexus/k8s/base/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nexus-mesh
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dev-ui-oficial
  namespace: nexus-mesh
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dev-ui-real
  template:
    metadata:
      labels:
        app: dev-ui-real
    spec:
      containers:
      - name: nginx-container
        image: docker.io/library/nginx:alpine
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
          name: http-web
        volumeMounts:
        - name: archivos-vol
          mountPath: /usr/share/nginx/html/nexus-frontend/index.html
          subPath: index.html
        - name: archivos-vol
          mountPath: /usr/share/nginx/html/nexus-frontend/app.js
          subPath: app.js
        - name: archivos-vol
          mountPath: /usr/share/nginx/html/nexus-frontend/style.css
          subPath: style.css
        - name: archivos-vol
          mountPath: /etc/nginx/conf.d/default.conf
          subPath: default.conf
        readinessProbe:
          tcpSocket:
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
        livenessProbe:
          tcpSocket:
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 10
      volumes:
      - name: archivos-vol
        configMap:
          name: ui-archivos-config
---
apiVersion: v1
kind: Service
metadata:
  name: dev-ui-service-real
  namespace: nexus-mesh
spec:
  type: ClusterIP
  selector:
    app: dev-ui-real
  ports:
  - name: http
    port: 80
    targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chatbot-backend
  namespace: nexus-mesh
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chatbot-backend
  template:
    metadata:
      labels:
        app: chatbot-backend
    spec:
      containers:
      - name: backend
        image: chatbot-backend:v12
        imagePullPolicy: IfNotPresent
        command: ["sh", "-c"]
        args:
        - |
          pip install --no-cache-dir grpcio grpcio-tools psutil orjson httpx pydantic pydantic-settings && \
          python src/main.py
        ports:
        - containerPort: 50051
      - name: mcp-server
        image: alpine:latest
        imagePullPolicy: IfNotPresent
        command: ["/bin/sh", "-c", "echo 'MCP Server activo'; sleep infinity"]
---
apiVersion: v1
kind: Service
metadata:
  name: chatbot-backend-service
  namespace: nexus-mesh
spec:
  type: ClusterIP
  selector:
    app: chatbot-backend
  ports:
  - name: grpc
    port: 50051
    targetPort: 50051
