Native/chatbot-nexus/k8s/base/gateway-nativo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nexus-internal-proxy
  namespace: nexus-mesh
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nexus-proxy
  template:
    metadata:
      labels:
        app: nexus-proxy
    spec:
      containers:
      - name: nginx
        image: docker.io/library/nginx:alpine
        ports:
        - containerPort: 80
        volumeMounts:
        - name: config-volume
          mountPath: /etc/nginx/nginx.conf
          subPath: nginx.conf
      volumes:
      - name: config-volume
        configMap:
          name: nexus-proxy-config
---
apiVersion: v1
kind: Service
metadata:
  name: nexus-gateway-interno
  namespace: nexus-mesh
spec:
  type: LoadBalancer # 🚀 Mapeo físico automático en tu localhost de la Mac
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: nexus-proxy
