Native/chatbot-nexus/k8s/base/nexus-front-oficial.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dev-ui-web-oficial
  namespace: nexus-mesh
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dev-ui-web-real
  template:
    metadata:
      labels:
        app: dev-ui-web-real
    spec:
      containers:
      - name: nginx-front
        image: docker.io/library/nginx:alpine
        ports:
        - containerPort: 80
          name: http
        volumeMounts:
        - name: html-volume
          mountPath: /usr/share/nginx/html # 🚀 Inyección de tus archivos
        - name: html-volume
          mountPath: /etc/nginx/conf.d/default.conf # 🛠️ Bloqueamos el "Welcome" de raíz
          subPath: app.js
        readinessProbe:
          tcpSocket:
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
        livenessProbe:
          tcpSocket:
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 10
      volumes:
      - name: html-volume
        configMap:
          name: ui-js-config
---
apiVersion: v1
kind: Service
metadata:
  name: dev-ui-web-service-real
  namespace: nexus-mesh
spec:
  type: ClusterIP
  selector:
    app: dev-ui-web-real
  ports:
  - name: http
    port: 80
    targetPort: 80
